--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     <td>256</td>
   </tr>
   <tr bgcolor="#3399CC">
-    <td colspan="5" style="text-align:left;color:#FFFFFF;"">UNIQUE VISITORS</td>
+    <td colspan="5" style="text-align:left;color:#FFFFFF;">UNIQUE VISITORS</td>
     </tr>
   <tr>
     <td style="text-align:left">Past 7 Days</td>
