--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="twelve columns">
     <div class="headline"><h1>Year-to-date sales
-   	    <img src="images/contact-icon.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1>
+   	    <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1>
     </div> 
     <img src="https://i.imgsafe.org/205d00492f.jpg" alt="" />
     </div>
@@ -60,7 +60,7 @@
 Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
 
       <div class="headline"><h1>Realiability &amp; Usage
-   	      <img src="images/contact-icon.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1>
       </div>
         <table width="100%">
 <tbody valign="middle">
@@ -109,7 +109,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 </table>
     </div>
     <div class="six columns"><div class="headline"><h1>Ideas &amp; Projects
-   	      <img src="images/contact-icon.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1>
     </div>
         <div id="chart_div" style="width: 45%; height: 78%; float:left; margin-left:20px; margin-top: 38px"></div>
         <div id="donutchart" style="width: 45%; height: 78%; float:right; margin-top: 38px"></div>
@@ -131,31 +131,31 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
     <td width="25%" style="width:21%;">85%</td>
     <td width="25%" style="width:21%;">08/17</td>
-    <td width="12%" style="width:12%;"><img src="images/green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
     <td>85%</td>
     <td>09/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
     <td>85%</td>
     <td>10/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
     <td>85%</td>
     <td>11/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
     <td>85%</td>
     <td>12/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   </tbody>
 </table>
@@ -169,31 +169,31 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
     <td width="25%" style="width:21%;">85%</td>
     <td width="25%" style="width:21%;">08/17</td>
-    <td width="12%" style="width:12%;"><img src="images/green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
     <td>85%</td>
     <td>09/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
     <td>85%</td>
     <td>10/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
     <td>85%</td>
     <td>11/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
     <td>85%</td>
     <td>12/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   </tbody>
 </table>
@@ -207,31 +207,31 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
     <td width="25%" style="width:21%;">85%</td>
     <td width="25%" style="width:21%;">08/17</td>
-    <td width="12%" style="width:12%;"><img src="images/green.png"></td>
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
     <td>85%</td>
     <td>09/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
     <td>85%</td>
     <td>10/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
     <td>85%</td>
     <td>11/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
     <td>85%</td>
     <td>12/17</td>
-    <td><img src="images/green.png"></td>
+    <td><img src="images/circle_green.png"></td>
   </tr>
   </tbody>
 </table>
