--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="row">
     <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
-      <img src="images/contact-icon.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1></div> <img src="https://s9.postimg.org/hkcvpelvj/Capture5.png" />
+      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right; margin-top:9px;"/></h1></div> <img src="https://s9.postimg.org/hkcvpelvj/Capture5.png" />
 	  <div class="lightbox" id="mylightbox">
 Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
 
