--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Digital Delivery Dashboard</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -27,7 +26,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="shortcut icon" type="image/ico" href="http://media.wiley.com/spa_assets/R16B088RC2/site/wiley2/pvo/images/favicon.ico" />
   <!--Load the AJAX API-->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript" src="script.js"></script>
@@ -678,4 +677,3 @@ for (i = 0; i < acc.length; i++) {
 
 </body>
 </html>
->>>>>>> 1940b4066e4c176f56270a046976075c852e0ae3
