--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Digital Delivery Dashboard</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="twelve columns">
     <div class="headline"><h1>Year-to-date sales
-   	    <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;"/></h1>
+   	    <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
     </div> 
     <img src="https://i.imgsafe.org/205d00492f.jpg" alt="" />
     </div>
@@ -55,12 +55,12 @@
   <div class="row">
     <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
-      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;"/></h1></div> <img src="https://s9.postimg.org/hkcvpelvj/Capture5.png" />
+      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1></div> <img src="https://s9.postimg.org/hkcvpelvj/Capture5.png" />
 	  <div class="lightbox" id="mylightbox">
 Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
 
       <div class="headline"><h1>Realiability &amp; Usage
-   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
       </div>
         <table width="100%">
 <tbody valign="middle">
@@ -109,7 +109,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 </table>
     </div>
     <div class="six columns"><div class="headline"><h1>Ideas &amp; Projects
-   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
     </div>
         <div id="chart_div" style="width: 45%; height: 78%; float:left; margin-left:20px; margin-top: 38px"></div>
         <div id="donutchart" style="width: 45%; height: 78%; float:right; margin-top: 38px"></div>
