--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     <td>WPLS</td>
   </tr>
   <tr>
-    <td colspan="5" bgcolor="#3399CC" style="text-align:left;color:#FFFFFF;">RELIABILITY<span class="tooltipHelp" data-featherlight="#question">?</span></td>
+    <td colspan="5" bgcolor="#3399CC" style="text-align:left;color:#FFFFFF;">RELIABILITY</td>
     </tr>
   <tr>
     <td style="text-align:left">Uptime</td>
