--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function drawChart() {
         });  
             // Create the data table.
           var data2 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
+            ['Status', 'none'],
             ['Submitted',     10],
             ['In Review',      6],
   //          ['Descoped',  5],
@@ -101,10 +101,10 @@ function drawChart() {
             backgroundColor: '#F2F2F2',
             title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 1, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: 'darkgrey' },
@@ -117,7 +117,7 @@ function drawChart() {
   
                 // Create the data table.
           var data4 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
+            ['Status', 'none'],
             ['Delayed',     35],
             ['On Track',      60],
             ['Descoped',  5],
@@ -128,10 +128,10 @@ function drawChart() {
             backgroundColor: '#F2F2F2',
             title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 16, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: '#FFCC33' },
@@ -144,7 +144,7 @@ function drawChart() {
   
                 // Create the data table.
           var data5 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
+            ['Status', 'none'],
             ['Delayed',     20],
             ['On Track',      75],
             ['Descoped',  5],
@@ -155,10 +155,10 @@ function drawChart() {
             backgroundColor: '#F2F2F2',
             title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 16, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: '#FFCC33' },
@@ -171,7 +171,7 @@ function drawChart() {
   
                 // Create the data table.
           var data6 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
+            ['Status', 'none'],
             ['Delayed',     20],
             ['On Track',      80],
             ['Descoped',  0],
@@ -182,10 +182,10 @@ function drawChart() {
             backgroundColor: '#F2F2F2', 
             title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 16, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: '#FFCC33' },
@@ -235,11 +235,11 @@ function drawChart() {
     </div>
     
     
-    <div class=intext style="margin-left: 3%; margin-top: 70px; z-index: 3">Jun 30
+    <div class=intext style="margin-left: 3%; margin-top: 160px; z-index: 3">Jun 30
       <div style="display:inline-block; margin-left: 65px">Jun 30</div>
       <div style="display:inline-block; margin-left: 65px">Aug 25</div>      
       <div style="display:inline-block; margin-left: 65px">Sep 10</div>
-        <div class=innertext style="margin-top: -15px">next release
+        <div class=innertext style="margin-top: -10px">next release
 			  <div style="display:inline-block; margin-left: 65px">next release</div>
 			  <div style="display:inline-block; margin-left: 70px">next release </div>      
 			  <div style="display:inline-block; margin-left: 70px">next release</div>
