--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     <td>WPLS</td>
   </tr>
   <tr>
-    <td colspan="5" bgcolor="#3399CC" style="text-align:left;color:#FFFFFF;">RELIABILITY</td>
+    <td colspan="5" bgcolor="#3399CC" style="text-align:left;color:#FFFFFF;">RELIABILITY<span class="tooltipHelp" data-featherlight="#question">?</span></td>
     </tr>
   <tr>
     <td style="text-align:left">Uptime</td>
@@ -320,7 +320,6 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <tbody valign="middle">
     <tr>
     <td width="46%" style="text-align:left;"><strong>NAME</strong></td>
-    <td width="21%"><strong>COMPLETE</strong></td>
     <td width="21%"><strong>DUE DATE</strong></td>
     <td width="12%"><strong>RISK</strong></td>
     </tr>
@@ -332,31 +331,26 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <tbody valign="middle">
   <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="25%" style="width:21%;">85%</td>
     <td width="25%" style="width:21%;">08/17</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
-    <td>85%</td>
     <td>09/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
-    <td>85%</td>
     <td>10/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
-    <td>85%</td>
     <td>11/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
-    <td>85%</td>
     <td>12/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
@@ -370,31 +364,26 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <tbody valign="middle">
 <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="25%" style="width:21%;">85%</td>
     <td width="25%" style="width:21%;">08/17</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
-    <td>85%</td>
     <td>09/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
-    <td>85%</td>
     <td>10/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
-    <td>85%</td>
     <td>11/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
-    <td>85%</td>
     <td>12/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
@@ -408,31 +397,26 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <tbody valign="middle">
   <tr>
     <td width="38%" style="text-align:left;width:46%;"><a href="#">Operationalizing Digital Delivery</a></td>
-    <td width="25%" style="width:21%;">85%</td>
     <td width="25%" style="width:21%;">08/17</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Project Framework Best Practices</a></td>
-    <td>85%</td>
     <td>09/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Digital Delivery Dashboard</a></td>
-    <td>85%</td>
     <td>10/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Career Portal</a></td>
-    <td>85%</td>
     <td>11/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
     <td style="text-align:left"><a href="#">Unified DD Dropbox Account</a></td>
-    <td>85%</td>
     <td>12/17</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
