--- a/index.html
+++ b/index.html
@@ -216,15 +216,18 @@ function drawChart() {
   <div class="row">
     <div class="twelve columns">
     <div class="headline"><h1>Year-to-date sales
-   	    <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	    <img src="images/business-contact.png" data-featherlight="#sales" alt="" style="float:right;padding-right:0.5em;"/></h1>
     </div> 
+    <div class="lightbox" id="sales">
+Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
+
     <img src="https://i.imgsafe.org/205d00492f.jpg" alt="" />
     </div>
     </div>
   <div class="row">
     <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
-      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
+      <img src="images/business-contact.png" data-featherlight="#productupdates" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
 	 
 	  <!-- Product Updates Charts -->
 	  
@@ -252,13 +255,14 @@ function drawChart() {
        <div id="donutchart5" style="width: 22%; height: 44%; margin-left:10px; display: inline-block"></div>
     <img src="https://i.imgsafe.org/5d8b819914.jpg" alt="" style="width: 50%; height: 10%; margin-left: 45%; margin-top: 20px"/>
 
-	  <div class="lightbox" id="mylightbox">
+	  <div class="lightbox" id="productupdates">
 Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
 
       <div class="headline"><h1>Reliability &amp; Usage
-   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="" style="float:right;padding-right:0.5em;"/></h1>
       </div>
-       <div class="lightbox" id="question">Information on what these are can be put here.</div>
+      <div class="lightbox" id="reliability">
+Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
         <table width="100%">
 <tbody valign="middle">
   <tr>
@@ -306,9 +310,10 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 </table>
     </div>
     <div class="six columns"><div class="headline"><h1>Ideas &amp; Projects
-   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#ideasprojects" alt="" style="float:right;padding-right:0.5em;"/></h1>
     </div>
-      
+      <div class="lightbox" id="ideasprojects">
+Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
 <!-- Ideas and projects charts -->	
 	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
     <div id="chart_div" style="width: 60%; height: 88%; float:left; margin-left:10px; margin-top: 38px"></div>
