--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
-//load in packages for tree, line, and donut charts
 google.load('visualization', '1', {
     'packages': ['corechart']
 });
@@ -23,7 +22,6 @@ google.load('visualization', '1', {
 });
 google.setOnLoadCallback(drawChart);
 function drawChart() {
-
 	// PROJECTS - TREEMAP    
         var data = google.visualization.arrayToDataTable([ 
           ['ProjectType', 'Parent', 'Volume (size)', 'Status (color)'],
@@ -45,7 +43,6 @@ function drawChart() {
         ]);
             // Instantiate and draw our chart, passing in some options.
         tree = new google.visualization.TreeMap(document.getElementById('chart_div'));
-
         tree.draw(data, {
           minColor: '#3399CC',
           midColor: '#FFCC33',
@@ -59,17 +56,16 @@ function drawChart() {
         });  
             // PROJECTS & IDEAS - DONUT CHART
           var data2 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
-            ['Sumbitted',     10],
+            ['Status', 'none'],
+            ['Submitted',     10],
             ['In Review',      6],
           ]);
-
           var options2 = {
             legend: {position: 'bottom'},
             backgroundColor: '#F2F2F2',
-            title: 'ideas_donut',
+            title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.5,
+            pieHole: 0.4,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 20, bold: 'true'},
             pieSliceText: 'value',
@@ -79,9 +75,8 @@ function drawChart() {
             1: { color: '#FFCC33' },
             2: { color: '#CC3300'}}
           }; 
-
-            var ideas = new google.visualization.PieChart(document.getElementById('ideas'));
-            ideas.draw(data2, options2);   
+            var chart2 = new google.visualization.PieChart(document.getElementById('donutchart'));
+            chart2.draw(data2, options2);   
   
   
               // DUMMIES DONUT CHART 1 FOR PRODUCT UPDATES
@@ -91,106 +86,98 @@ function drawChart() {
             ['On Track',      33],
             ['Descoped',  33],
           ]);
-
           var options3 = {
             legend: {position: 'none'},
             backgroundColor: '#F2F2F2',
-            title: 'Dummies',
+            title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 1, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: 'darkgrey' },
             1: { color: 'darkgrey' },
             2: { color: 'darkgrey'}}
           }; 
-
-            var dummies = new google.visualization.PieChart(document.getElementById('dummies'));
-            dummies.draw(data3, options3);
+            var chart3 = new google.visualization.PieChart(document.getElementById('donutchart2'));
+            chart3.draw(data3, options3);
   
-                // PRODUCT UPDATES - WEL DONUT CHART 1
+                // PRODUCT UPDATES - WEL DONUT CHART 2
           var data4 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
+            ['Status', 'none'],
             ['Delayed',     35],
             ['On Track',      60],
             ['Descoped',  5],
           ]);
-
           var options4 = {
             legend: {position: 'none'},
             backgroundColor: '#F2F2F2',
-            title: 'WEL',
+            title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 16, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: '#FFCC33' },
             1: { color: '#66CC66' },
             2: { color: '#CC3300'}}
           }; 
-
-            var wel = new google.visualization.PieChart(document.getElementById('wel'));
-            wel.draw(data4, options4);
+            var chart4 = new google.visualization.PieChart(document.getElementById('donutchart3'));
+            chart4.draw(data4, options4);
   
         //PRODUCT UPDATES - WILEYPLUS DONUT CHART 3
           var data5 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
+            ['Status', 'none'],
             ['Delayed',     20],
             ['On Track',      75],
             ['Descoped',  5],
           ]);
-
           var options5 = {
             legend: {position: 'none'},
             backgroundColor: '#F2F2F2',
             title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 16, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: '#FFCC33' },
             1: { color: '#66CC66' },
             2: { color: '#CC3300'}}
           }; 
-
-            var wileyplus = new google.visualization.PieChart(document.getElementById('wileyplus'));
-            wileyplus.draw(data5, options5);
+            var chart5 = new google.visualization.PieChart(document.getElementById('donutchart4'));
+            chart5.draw(data5, options5);
   
                 // PRODUCT UPDATES - WPLS DONUT CHART 4
           var data6 = google.visualization.arrayToDataTable([
-            ['Status', 'Value'],
+            ['Status', 'none'],
             ['Delayed',     20],
             ['On Track',      80],
             ['Descoped',  0],
           ]);
-
           var options6 = {
             legend: {position: 'none'},
             backgroundColor: '#F2F2F2', 
-            title: 'WPLS',
+            title: 'WileyPLUS',
             titlePosition: 'none',
-            pieHole: 0.55,
+            pieHole: 0.45,
             'chartArea': {'width': '100%', 'height': '80%'},
             pieSliceTextStyle: {color: 'black', fontName: 'Helvetica', fontSize: 16, bold: 'true'},
-            pieSliceText: 'value',
+            pieSliceText: 'none',
             fontSize: 14,
             slices: {
             0: { color: '#FFCC33' },
             1: { color: '#66CC66' },
             2: { color: '#CC3300'}}
           }; 
-
-            var wpls = new google.visualization.PieChart(document.getElementById('wpls'));
-            wpls.draw(data6, options6);
+            var chart6 = new google.visualization.PieChart(document.getElementById('donutchart5'));
+            chart6.draw(data6, options6);
         
 }
 </script>
@@ -211,18 +198,15 @@ function drawChart() {
   <div class="row">
     <div class="twelve columns">
     <div class="headline"><h1>Year-to-date sales
-   	    <img src="images/business-contact.png" data-featherlight="#sales" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	    <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
     </div> 
-    <div class="lightbox" id="sales">
-Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
-
     <img src="https://i.imgsafe.org/205d00492f.jpg" alt="" />
     </div>
     </div>
   <div class="row">
     <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
-      <img src="images/business-contact.png" data-featherlight="#productupdates" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
+      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
 	 
 	  <!-- Product Updates Charts -->
 	  
@@ -250,14 +234,13 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
        <div id="donutchart5" style="width: 22%; height: 44%; margin-left:10px; display: inline-block"></div>
     <img src="https://i.imgsafe.org/5d8b819914.jpg" alt="" style="width: 50%; height: 10%; margin-left: 45%; margin-top: 20px"/>
 
-	  <div class="lightbox" id="productupdates">
+	  <div class="lightbox" id="mylightbox">
 Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
 
       <div class="headline"><h1>Reliability &amp; Usage
-   	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
       </div>
-      <div class="lightbox" id="reliability">
-Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
+       <div class="lightbox" id="question">Information on what these are can be put here.</div>
         <table width="100%">
 <tbody valign="middle">
   <tr>
@@ -305,10 +288,9 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 </table>
     </div>
     <div class="six columns"><div class="headline"><h1>Ideas &amp; Projects
-   	      <img src="images/business-contact.png" data-featherlight="#ideasprojects" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#mylightbox" alt="" style="float:right;padding-right:0.5em;"/></h1>
     </div>
-      <div class="lightbox" id="ideasprojects">
-Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
+      
 <!-- Ideas and projects charts -->	
 	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
     <div id="chart_div" style="width: 60%; height: 88%; float:left; margin-left:10px; margin-top: 38px"></div>
