--- a/index.html
+++ b/index.html
@@ -20,30 +20,26 @@ google.load('visualization', '1', {
 });
 
 
-//google.load('visualization', '1', {
-  //  'packages': ['corechart']});
-//google.load('visualization', '1', {
-  //  'packages': ['treemap']});
 google.setOnLoadCallback(drawChart);
 function drawChart() {
 	// PROJECTS - TREEMAP    
         var data = google.visualization.arrayToDataTable([ 
           ['ProjectType', 'Parent', 'Volume (size)', 'Status (color)'],
-          ['Projects', null, 0, 0],
-          ['Prototype',   'Projects', 0,0],
-          ['POC', 'Projects', 0, 0],
-          ['Discovery', 'Projects', 0, 0],
-          ['On Hold', 'Projects', 0, 0],
-          ['Pilot', 'Projects', 0, 0],
-          ['Prototype 1', 'Prototype', 11, 5],
-          ['Prototype 2', 'Prototype', 52, 10],
-          ['POC 1', 'POC', 42, 100],
-          ['POC 2', 'POC', 31, 90],
-          ['Discovery 1', 'Discovery', 36, 55],
-          ['Discovery 2', 'Discovery', 20, 50],
-          ['Discovery 3', 'Discovery', 40, 63],
-          ['Pilot 1', 'Pilot', 21, 50],
-          ['On Hold 1', 'On Hold', 21, 5],          
+          ['Projects', null,            0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['Prototype',   'Projects',   0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['POC', 'Projects',           0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['Discovery', 'Projects',     0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['On Hold', 'Projects',       0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['Pilot', 'Projects',         0 /* Input custom x*/,  0 /* Input custom y*/],
+          ['Prototype 1', 'Prototype', 11 /* Input custom x*/,  5 /* Input custom y*/],
+          ['Prototype 2', 'Prototype', 52 /* Input custom x*/, 10 /* Input custom y*/],
+          ['POC 1', 'POC',             42 /* Input custom x*/,100 /* Input custom y*/],
+          ['POC 2', 'POC',             31 /* Input custom x*/, 90 /* Input custom y*/],
+          ['Discovery 1', 'Discovery', 36 /* Input custom x*/, 55 /* Input custom y*/],
+          ['Discovery 2', 'Discovery', 20 /* Input custom x*/, 50 /* Input custom y*/],
+          ['Discovery 3', 'Discovery', 40 /* Input custom x*/, 63 /* Input custom y*/],
+          ['Pilot 1', 'Pilot',         21 /* Input custom x*/, 50 /* Input custom y*/],
+          ['On Hold 1', 'On Hold',     21 /* Input custom x*/,  5 /* Input custom y*/],          
         ]);
             // Instantiate and draw our chart, passing in some options.
         tree = new google.visualization.TreeMap(document.getElementById('chart_div'));
@@ -61,8 +57,8 @@ function drawChart() {
             // PROJECTS & IDEAS - DONUT CHART
           var data2 = google.visualization.arrayToDataTable([
             ['Status', 'none'],
-            ['Submitted',     10],
-            ['In Review',      6],
+            ['Submitted',     10 /* Input custom y*/],
+            ['In Review',      6 /* Input custom y*/],
           ]);
           var options2 = {
             legend: {position: 'bottom'},
@@ -86,9 +82,9 @@ function drawChart() {
               // DUMMIES DONUT CHART 1 FOR PRODUCT UPDATES
           var data3 = google.visualization.arrayToDataTable([
             ['Status', 'Value'],
-            ['Delayed',     33],
-            ['On Track',      33],
-            ['Descoped',  33],
+            ['Delayed',   33 /* Input custom y*/],
+            ['On Track',  33 /* Input custom y*/],
+            ['Descoped',  33 /* Input custom y*/],
           ]);
           var options3 = {
             legend: {position: 'none'},
@@ -111,9 +107,9 @@ function drawChart() {
                 // PRODUCT UPDATES - WEL DONUT CHART 2
           var data4 = google.visualization.arrayToDataTable([
             ['Status', 'none'],
-            ['Delayed',     35],
-            ['On Track',      60],
-            ['Descoped',  5],
+            ['Delayed',     35 /* Input custom y*/],
+            ['On Track',    60 /* Input custom y*/],
+            ['Descoped',     5 /* Input custom y*/],
           ]);
           var options4 = {
             legend: {position: 'none'},
@@ -136,9 +132,9 @@ function drawChart() {
         //PRODUCT UPDATES - WILEYPLUS DONUT CHART 3
           var data5 = google.visualization.arrayToDataTable([
             ['Status', 'none'],
-            ['Delayed',     20],
-            ['On Track',      75],
-            ['Descoped',  5],
+            ['Delayed',     20 /* Input custom y*/],
+            ['On Track',    75 /* Input custom y*/],
+            ['Descoped',     5 /* Input custom y*/],
           ]);
           var options5 = {
             legend: {position: 'none'},
@@ -161,9 +157,9 @@ function drawChart() {
                 // PRODUCT UPDATES - WPLS DONUT CHART 4
           var data6 = google.visualization.arrayToDataTable([
             ['Status', 'none'],
-            ['Delayed',     20],
-            ['On Track',      80],
-            ['Descoped',  0],
+            ['Delayed',     20 /* Input custom y*/],
+            ['On Track',    80 /* Input custom y*/],
+            ['Descoped',     0 /* Input custom y*/],
           ]);
           var options6 = {
             legend: {position: 'none'},
@@ -188,7 +184,7 @@ function drawChart() {
       data7.addColumn('number', 'X');
       data7.addColumn('number', 'year 2017');
       data7.addColumn('number', 'year 2016');
-//Edit Data point (x, y1, y2)
+	//Edit Data point (x, y1, y2)
       data7.addRows([
         [0,  100, 210],
         [.5, 150, 185],
@@ -226,12 +222,12 @@ function drawChart() {
       line.draw(data7, options7);
   
   
- //create 2nd line chart - WEL
+	//create 2nd line chart - WEL
         var data8 = new google.visualization.DataTable();
       data8.addColumn('number', 'X');
       data8.addColumn('number', 'year 2017');
       data8.addColumn('number', 'year 2016');
-//Edit Data point (x, y1, y2)
+	//Edit Data point (x, y1, y2)
       data8.addRows([
         [0,  100, 210],
         [.5, 150, 185],
@@ -269,12 +265,12 @@ function drawChart() {
       line2.draw(data8, options8);
   
   
-  //create 3rd line chart - WileyPLUS
+	//create 3rd line chart - WileyPLUS
         var data9 = new google.visualization.DataTable();
       data9.addColumn('number', 'X');
       data9.addColumn('number', 'year 2017');
       data9.addColumn('number', 'year 2016');
-//Edit Data point (x, y1, y2)
+	//Edit Data point (x, y1, y2)
       data9.addRows([
         [0,  100, 210],
         [.5, 150, 185],
@@ -312,12 +308,12 @@ function drawChart() {
       line3.draw(data9, options9);
   
   
-  //create 4th chart - WPLS
+	//create 4th chart - WPLS
         var data10 = new google.visualization.DataTable();
       data10.addColumn('number', 'X');
       data10.addColumn('number', 'year 2017');
       data10.addColumn('number', 'year 2016');
-//Edit Data point (x, y1, y2)
+	//Edit Data point (x, y1, y2)
       data10.addRows([
         [0,  100, 210],
         [.5, 150, 185],
